# VNKey

./: .gitignore  LICENSE  README.md  apply_instructions.json  apply_instructions_utf8.json  design_instructions.json  design_instructions_utf8.json  proposal_instructions.json  proposal_instructions_utf8.json  specs_instructions.json  specs_instructions_utf8.json  tasks_instructions.json  tasks_instructions_utf8.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/benches/: engine_bench.rs
core/examples/: debug_gieng.rs
core/src/: config.rs  converter.rs  dictionary.rs  error.rs  ffi.rs  hook.rs  inspect_onsets.rs  lib.rs  phonology.rs  shorthand.rs  syllable.rs  telex.rs  temp_sort.rs  tone.rs  unicode_map.rs  viqr.rs  vni.rs
core/tests/: advanced_edge_cases.proptest-regressions  advanced_edge_cases.rs  case_preservation_test.rs  comprehensive.rs  edge_cases.rs  editing_test.rs  english_data_regression.rs  env_sim_test.rs  fuzz_test.rs  hook_sim_test.rs  messy_typing_test.rs  phase1_features.rs  phase2_features.rs  reproduce_bugs.rs  reproduce_typing_bugs.rs  senior_features.rs  stress_test.rs  trace_bugs.rs  typing_rules_test.rs  unicode_test.rs  universal_test.rs
core/tests/universal_suite/: generator.rs  mapper.rs  mod.rs  syllables.rs
